# reltio-mcp-strands-client

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  system_prompt.txt
config/: __init__.py  auth.py  config.py  exceptions.py
strands_client/: __init__.py  chat.py  client.py  health_check.py  task.py
tests/: __init__.py  test_config.py  test_strands.py
